<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5EDFB"
    tools:context=".EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user_avatar"
            android:contentDescription="@string/profile_img" />

        <!-- Gallery and Camera Buttons -->
        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <Button
                android:id="@+id/gallery_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pick_from_gallery"
                android:backgroundTint="#6A4C93"
                android:textColor="#FFFFFF"
                android:textAllCaps="false" />

            <!--            <Button-->
            <!--                android:id="@+id/take_picture_btn"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/take_picture"-->
            <!--                android:backgroundTint="#6A4C93"-->
            <!--                android:textColor="#FFFFFF"-->
            <!--                android:textAllCaps="false" />-->
        </LinearLayout>

        <!-- Name Field -->
        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textColor="#6A4C93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonContainer" />

        <EditText
            android:id="@+id/userNameView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:hint="Enter Name"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

        <!-- Phone Field -->
        <TextView
            android:id="@+id/userPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textColor="#6A4C93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameView" />

        <EditText
            android:id="@+id/userPhoneView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:hint="Enter Phone"
            android:inputType="phone"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintTop_toBottomOf="@+id/userPhoneTextView" />

        <LinearLayout
            android:id="@+id/buttonActionContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPhoneView">

            <!-- Save Button -->
            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/save"
                android:backgroundTint="#6A4C93"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/userPhoneView" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/cancel"
                android:backgroundTint="#6A4C93"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/add_student_success_saved_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/progress_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:elevation="10dp"
        android:visibility="gone" />

</FrameLayout>